Fonctionnalités de recuperation des GeographicArea (communes + HRM)
